test/zinc_source/compile_errors/callables/19_nested_async_callable_value.zn
// expected-error: async functions cannot be used as callable values
fn main() {
    async inner() {
        print(1)
    }

    f = inner
    f()
}
